feat: refresh uploaded shares api
