# docs/swagger.json
@@ -320,6 +320,25 @@
                 }
             }
         },
+        "/shamir/refresh": {
+            "put": {
+                "tags": [
+                    "shamir"
+                ],
+                "summary": "trigger for refresh uploaded shares",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.MessageResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/shamir/shares": {
             "post": {
                 "produces": [
@@ -1052,6 +1071,9 @@
         },
         "apis.UploadPublicKeyRequest": {
             "type": "object",
+            "required": [
+                "data"
+            ],
             "properties": {
                 "data": {
                     "description": "all standalone public keys",
